--- a/view/pom.xml
+++ b/view/pom.xml
@@ -21,6 +21,13 @@
             <artifactId>mars-rover-controller</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.stefanbirkner</groupId>
+            <artifactId>system-rules</artifactId>
+            <version>1.19.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
